# SDL2-Demo

./: CMakeLists.txt
Source/: CMakeLists.txt  main.cpp
